#1 Eliminated 108 warnings
6/6/2024: Most were for new Integer/Double/Long: change new to .valueOf. Others had to do with specifying generic types. Now there are no more warnings and the qna-test agent works just fine.