@@ -86,14 +86,14 @@ public class JSONArray {
     /**
      * The arrayList where the JSONArray's properties are kept.
      */
-    private ArrayList myArrayList;
+    private ArrayList<JSONObject> myArrayList;
 
 
     /**
      * Construct an empty JSONArray.
      */
     public JSONArray() {
-        this.myArrayList = new ArrayList();
+        this.myArrayList = new ArrayList<JSONObject>();
     }
 
     /**
@@ -111,10 +111,10 @@ public class JSONArray {
 	        for (;;) {
 	            if (x.nextClean() == ',') {
 	                x.back();
-	                this.myArrayList.add(JSONObject.NULL);
+	                this.myArrayList.add((JSONObject) JSONObject.NULL);
 	            } else {
 	                x.back();
-	                this.myArrayList.add(x.nextValue());
+	                this.myArrayList.add((JSONObject) x.nextValue());
 	            }
 	            switch (x.nextClean()) {
 	            case ';':
@@ -150,12 +150,13 @@ public class JSONArray {
      * Construct a JSONArray from a Collection.
      * @param collection     A Collection.
      */
-    public JSONArray(Collection collection) {
-		this.myArrayList = new ArrayList();
+    public JSONArray(Collection<?> collection) {
+		this.myArrayList = new ArrayList<JSONObject>();
 		if (collection != null) {
-			Iterator iter = collection.iterator();
+			Iterator<?> iter = collection.iterator();
 			while (iter.hasNext()) {
-                this.myArrayList.add(JSONObject.wrap(iter.next()));  
+                this.myArrayList.add(
+                		(JSONObject) JSONObject.wrap(iter.next()));  
 			}
 		}
     }
@@ -577,7 +578,7 @@ public class JSONArray {
      * @param value A Collection value.
      * @return      this.
      */
-    public JSONArray put(Collection value) {
+    public JSONArray put(Collection<?> value) {
         put(new JSONArray(value));
         return this;
     }
@@ -591,7 +592,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(double value) throws JSONException {
-        Double d = new Double(value);
+        Double d = Double.valueOf(value);
         JSONObject.testValidity(d);
         put(d);
         return this;
@@ -605,7 +606,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(int value) {
-        put(new Integer(value));
+        put(Integer.valueOf(value));
         return this;
     }
 
@@ -617,7 +618,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(long value) {
-        put(new Long(value));
+        put(Long.valueOf(value));
         return this;
     }
 
@@ -628,7 +629,7 @@ public class JSONArray {
      * @param value A Map value.
      * @return      this.
      */
-    public JSONArray put(Map value) {
+    public JSONArray put(Map<?, ?> value) {
         put(new JSONObject(value));
         return this;
     }
@@ -642,7 +643,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(Object value) {
-        this.myArrayList.add(value);
+        this.myArrayList.add((JSONObject) value);
         return this;
     }
 
@@ -671,7 +672,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative or if the value is
      * not finite.
      */
-    public JSONArray put(int index, Collection value) throws JSONException {
+    public JSONArray put(int index, Collection<?> value) throws JSONException {
         put(index, new JSONArray(value));
         return this;
     }
@@ -688,7 +689,7 @@ public class JSONArray {
      * not finite.
      */
     public JSONArray put(int index, double value) throws JSONException {
-        put(index, new Double(value));
+        put(index,  Double.valueOf(value));
         return this;
     }
 
@@ -703,7 +704,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, int value) throws JSONException {
-        put(index, new Integer(value));
+        put(index, Integer.valueOf(value));
         return this;
     }
 
@@ -718,7 +719,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        put(index, new Long(value));
+        put(index, Long.valueOf(value));
         return this;
     }
 
@@ -732,7 +733,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative or if the the value is
      *  an invalid number.
      */
-    public JSONArray put(int index, Map value) throws JSONException {
+    public JSONArray put(int index, Map<?, ?> value) throws JSONException {
         put(index, new JSONObject(value));
         return this;
     }
@@ -756,7 +757,7 @@ public class JSONArray {
             throw new JSONException("JSONArray[" + index + "] not found.");
         }
         if (index < length()) {
-            this.myArrayList.set(index, value);
+            this.myArrayList.set(index, (JSONObject) value);
         } else {
             while (index != length()) {
                 put(JSONObject.NULL);
